hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_mismatch6.php.exp
File "explicit_type_collection_mismatch6.php", line 4, characters 8-39:
The keys of this Map are incompatible (Typing[4110])
File "explicit_type_collection_mismatch6.php", line 4, characters 15-20:
Expected string
File "explicit_type_collection_mismatch6.php", line 4, characters 28-28:
But got int
