hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_mismatch6.php
<?hh

function f(): void {
  $e = dict<string, int>[9 => "nine"];
}
